# dynamo-bim-docs

./: .gitignore  LICENSE  README.md  dynamo.code-workspace  pyproject.toml  pyrightconfig.json
dynamo/: __main__.py
dynamo/command/: quality.py  run.py
dynamo/docs/: content.py  custom.py  doc_models.py  docs.py  docs_parser.py  headline.py  manager.py  package.py  script.py
dynamo/docs/export/: org.py
dynamo/docs/manual/: models.py  parser.py  repository.py  sections.py
dynamo/docs/models/: base.py  content.py  headlines.py  layout.py  nodes.py  sections.py
dynamo/io/: excel.py  file.py
dynamo/models/: files.py  model.py  nodes.py
dynamo/service/: __init__.py  dynamo.py  protocol.py
dynamo/source/: gateway.py
dynamo/source/json/: builder_files.py  builder_nodes.py  factory.py  gateway.py  repository.py
dynamo/utils/: checks.py  crawler.py  geom.py  paths.py  string.py  types.py  values.py
tests/docs/parser/: test_docs_parser.py
