[tool.poetry]
name = "dynamo"
version = "0.1.0"
description = ""
authors = ["erich.raschle <erich.raschle@rsrg.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.304"
autopep8 = "^2.0.2"
autoflake = "^2.1.1"
typing-extensions = "^4.5.0"
isort = "^5.12.0"
pyflakes = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
